# dlai-building-systems-with-chatgpt

./: Makefile  README.md  l1-language-models.ipynb  pyproject.toml  requirements.in  requirements.txt
lessons/: l1-language-models.ipynb  l2-classification.ipynb  l3-moderation.ipynb  l4-process-inputs-chain-of-thought.ipynb  l5-chaining-prompts.ipynb  l6-check-outputs.ipynb  l7-build-an-end-to-end-system.ipynb  l8-evaluation.ipynb  l9-evaluation-part2.ipynb
src/: utils.py
