[tool.poetry]
name = "dlai-build-with-chatgpt"
version = "0.0.900"
description = "Deeplearning.ai course by Andrew Ng"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dlai_build_with_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
